--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,6 @@
         @apply bg-[conic-gradient(var(--tw-gradient-stops))] from-yellow-400 via-yellow-300 to-yellow-500;
     }
     ._arrow{
-        @apply w-20 h-20 mx-14
+        @apply w-20 h-20 mx-14 cursor-pointer
     }
 }
