--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,9 @@
 
 @layer components{
     body{
-        @apply bg-[conic-gradient(var(--tw-gradient-stops))] from-yellow-400 via-yellow-300 to-yellow-500;
-        /* @apply overflow-hidden; */
+        @apply bg-[conic-gradient(var(--tw-gradient-stops))] from-yellow-400 via-yellow-300 to-yellow-500 bg-fixed;
+        @apply overflow-auto;
+        @apply scrollbar hover:scrollbar-thumb-gray-900 scrollbar-thumb-black scrollbar-track-gray-200
     }
     ._arrow{
         @apply w-20 h-20 mx-14 cursor-pointer
